tests/syntax_error/python_style_unpack.jou
def main() -> int:
    x, y = "hi"  # Error: only one variable can be assigned at a time
